--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Threeseven</title>
+        <title>Threeseven Store</title>
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -57,8 +57,8 @@
     </head>
     <body>
         <div class="container">
-            <h1>Threeseven</h1>
-            <p>2024년 8월 20일, 곧 만나요.</p>
+            <h1>Threeseven | 3-7</h1>
+            <p>2024년 8월 20일에 공개됩니다.</p>
         </div>
     </body>
 </html>
