--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </head>
     <body>
         <div class="container">
-            <h1>Threeseven | 3-7</h1>
-            <p>2024년 8월 20일에 공개됩니다.</p>
+            <h1>Threeseven, 3-7</h1>
+            <p>2025년 8월 20일에 만나요.</p>
         </div>
     </body>
 </html>
